--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -49,6 +49,9 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     -
+      name: Login to DockerHub
+      run: pwd && tree && ll        
+    -
       name: Build and push
       uses: docker/build-push-action@v2
       with:
