--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,20 @@
 plugins {
-    id 'org.springframework.boot' version '3.0.0-RC1'
-    id 'io.spring.dependency-management' version '1.1.0'
     id 'java'
+    id 'org.springframework.boot' version '3.1.2'
+    id 'io.spring.dependency-management' version '1.1.2'
 }
 
-group = 'com.madwind'
-sourceCompatibility = '17'
+group = 'com.madwind.cdnserver'
+version = '0.0.1-SNAPSHOT'
 bootJar {
     archiveBaseName = 'cdnserver'
+}
+java {
+    sourceCompatibility = '17'
 }
 
 repositories {
     mavenCentral()
-    maven { url 'https://repo.spring.io/milestone' }
 }
 
 dependencies {
@@ -21,6 +23,6 @@ dependencies {
     testImplementation 'io.projectreactor:reactor-test'
 }
 
-test {
+tasks.named('test') {
     useJUnitPlatform()
 }
