--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,7 +19,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3.5.3
+    - 
+      name: Checkout master
+      uses: actions/checkout@v3.5.3
+    -
     - 
       name: Set up JDK 17
       uses: actions/setup-java@v3.12.0
@@ -37,10 +40,10 @@ jobs:
       uses: docker/setup-qemu-action@v2.2.0
     -
       name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v29.1
+      uses: docker/setup-buildx-action@v2.9.1
     -
       name: Login to DockerHub
-      uses: docker/login-action@v2 
+      uses: docker/login-action@v2.2.0
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
