--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,8 +26,8 @@ jobs:
       name: Set up JDK 17
       uses: actions/setup-java@v3.12.0
       with:
-        java-version: '17'
-        distribution: 'oracle'
+        java-version: '21'
+        distribution: 'oepnjdk'
     - 
       name: Setup Gradle
       uses: gradle/gradle-build-action@v2.7.0
