--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,11 +23,11 @@ jobs:
       name: Checkout master
       uses: actions/checkout@v3.5.3
     - 
-      name: Set up JDK 17
+      name: Set up JDK 21
       uses: actions/setup-java@v3.12.0
       with:
         java-version: '21'
-        distribution: 'oepnjdk'
+        distribution: 'oracle'
     - 
       name: Setup Gradle
       uses: gradle/gradle-build-action@v2.7.0
