--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.5'
-    id 'io.spring.dependency-management' version '1.1.4'
+    id 'idea'
+    id 'org.springframework.boot' version '3.3.0'
+    id 'io.spring.dependency-management' version '1.1.5'
 }
 
 group = 'com.madwind.cdnserver'
@@ -12,7 +13,12 @@ bootJar {
 java {
     sourceCompatibility = '21'
 }
-
+idea {
+    module {
+        downloadJavadoc = true
+        downloadSources = true
+    }
+}
 repositories {
     mavenCentral()
 }
