--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,34 +21,34 @@ jobs:
     steps:
     - 
       name: Checkout master
-      uses: actions/checkout@v3.5.3
+      uses: actions/checkout@v4
     - 
-      name: Set up JDK 21
-      uses: actions/setup-java@v3.12.0
+      name: Set up JDK 24
+      uses: actions/setup-java@v3
       with:
-        java-version: '21'
+        java-version: '24'
         distribution: 'oracle'
     - 
       name: Setup Gradle
-      uses: gradle/gradle-build-action@v2.7.0
+      uses: gradle/setup-gradle@v4
     - 
-      name: Execute Gradle build
+      name: Build with Gradle
       run: ./gradlew bootJar
     -
       name: Set up QEMU
-      uses: docker/setup-qemu-action@v2.2.0
+      uses: docker/setup-qemu-action@v3
     -
       name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2.9.1
+      uses: docker/setup-buildx-action@v3
     -
       name: Login to DockerHub
-      uses: docker/login-action@v2.2.0
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     -
       name: Build and push
-      uses: docker/build-push-action@v4.1.1
+      uses: docker/build-push-action@v6
       with:
         context: .
         platforms: linux/amd64,linux/arm64
