--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,6 +35,9 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew bootJar
 
+    - name: Build with Gradle2
+      run: cat /home/runner/work/_temp/.gradle-actions/build-results/__run-1750385829448.json
+
     - name: Get version from Gradle
       id: get_version
       run: echo "VERSION=$(./gradlew -q printVersion)" >> $GITHUB_OUTPUT
