--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,7 +36,7 @@ jobs:
       run: ./gradlew bootJar
 
     - name: Build with Gradle2
-      run: cat /home/runner/work/_temp/.gradle-actions/build-results/__run-1750385829448.json
+      run: ls build/libs/
 
     - name: Get version from Gradle
       id: get_version
